--- a/inst/extdata/reportTemplate.Rmd
+++ b/inst/extdata/reportTemplate.Rmd
@@ -3,7 +3,6 @@
 This content has been loaded from the template report `.Rmd` file. Please edit it at your best convenience!
 
 ```{r setup, include=FALSE, eval = TRUE, echo = FALSE}
-
 opts_chunk$set(
   echo=input$report_echo
 )
@@ -15,13 +14,11 @@ opts_chunk$set(
 The data provided was used to construct the following objects
 
 ```{r}
-
 values$mydds
 
 values$myrlt
 
 head(values$myannotation)
-
 ```
 
 The following design were used:
@@ -33,7 +30,6 @@ DT::datatable(as.data.frame(colData(values$mydds)))
 An overview of the table for the features is shown here, by displaying the `r input$countstable_unit`
 
 ```{r}
-
 if(input$countstable_unit=="raw_counts")
   currentMat <- counts(values$mydds,normalized=FALSE)
 if(input$countstable_unit=="normalized_counts")
@@ -132,12 +128,12 @@ The scree plot helps determining the number of underlying principal components
 
 ```{r}
 rv <- rowVars(assay(values$myrlt))
-      select <- order(rv, decreasing = TRUE)[seq_len(min(input$pca_nrgenes,length(rv)))]
-      pca <- prcomp(t(assay(values$myrlt)[select, ]))
+select <- order(rv, decreasing = TRUE)[seq_len(min(input$pca_nrgenes,length(rv)))]
+pca <- prcomp(t(assay(values$myrlt)[select, ]))
 
-      res <- pcascree(pca,type = input$scree_type, pc_nr = input$scree_pcnr, title="Scree plot for the samples PCA")
-      res <- res + theme_bw()
-      res
+res <- pcascree(pca,type = input$scree_type, pc_nr = input$scree_pcnr, title="Scree plot for the samples PCA")
+res <- res + theme_bw()
+res
 ```
 
 
@@ -146,12 +142,12 @@ The genes with the highest loadings in the selected principal components are the
 
 ```{r}
 rv <- rowVars(assay(values$myrlt))
-      select <- order(rv, decreasing = TRUE)[seq_len(min(input$pca_nrgenes,length(rv)))]
-      pca <- prcomp(t(assay(values$myrlt)[select, ]))
+select <- order(rv, decreasing = TRUE)[seq_len(min(input$pca_nrgenes,length(rv)))]
+pca <- prcomp(t(assay(values$myrlt)[select, ]))
 
-      par(mfrow=c(2,1))
-      hi_loadings(pca,whichpc = as.integer(input$pc_x),topN = input$ntophiload,annotation = values$myannotation)
-      hi_loadings(pca,whichpc = as.integer(input$pc_y),topN = input$ntophiload,annotation = values$myannotation)
+par(mfrow=c(2,1))
+hi_loadings(pca,whichpc = as.integer(input$pc_x),topN = input$ntophiload,annotation = values$myannotation)
+hi_loadings(pca,whichpc = as.integer(input$pc_y),topN = input$ntophiload,annotation = values$myannotation)
 ```
 
 
@@ -171,15 +167,16 @@ if(!is.null(input$color_by)) {
       }
       colGroups <- colSel()[factor(expgroups)]
 
-      res <- genespca(values$myrlt,
-                      ntop = input$pca_nrgenes,
-                      choices = c(as.integer(input$pc_x),as.integer(input$pc_y)),
-                      biplot = TRUE,
-                      arrowColors = factor(colGroups,levels=unique(colGroups)),
-                      groupNames = expgroups,
-                      alpha=input$pca_point_alpha,coordEqual=FALSE,useRownamesAsLabels=FALSE,labels.size=input$pca_label_size,
-                      point_size=input$pca_point_size,varname.size=input$pca_varname_size, scaleArrow = input$pca_scale_arrow,annotation=values$myannotation)
-      res
+res <- genespca(values$myrlt,
+                ntop = input$pca_nrgenes,
+                choices = c(as.integer(input$pc_x),as.integer(input$pc_y)),
+                biplot = TRUE,
+                arrowColors = factor(colGroups,levels=unique(colGroups)),
+                groupNames = expgroups,
+                alpha=input$pca_point_alpha,coordEqual=FALSE,useRownamesAsLabels=FALSE,labels.size=input$pca_label_size,
+                point_size=input$pca_point_size,varname.size=input$pca_varname_size, scaleArrow = input$pca_scale_arrow,
+                annotation=values$myannotation)
+res
 ```
 
 
@@ -191,7 +188,6 @@ if(!is.null(input$pcagenes_brush) & length(input$color_by)>0)
                    genelist = curData_brush()$ids,
                    intgroup = input$color_by,
                    plotZ = input$zprofile)
-
 ```
 
 
@@ -201,7 +197,6 @@ And here is an interactive heatmap for that subset
 
 if(!is.null(input$pcagenes_brush))
 {
-  
   brushedObject <- curData_brush()
   if(nrow(brushedObject) > 1){
     selectedGenes <- brushedObject$ids
